extends Node

# -------------------------------------------------------------------------------------------------
func impact() -> void:
	$Error.play()

# -------------------------------------------------------------------------------------------------
func success() -> void:
	$Success.play()

# -------------------------------------------------------------------------------------------------
func move() -> void:
	var sounds := [$Move1, $Move2, $Move3]
	sounds.shuffle()
	sounds[0].play()

# -------------------------------------------------------------------------------------------------
func move_back() -> void:
	$MoveBack.play()
